Bug 70913 - [PIGLIT,radeonsi] crash in "spec/EXT_framebuffer_multisample/sample-alpha-to-coverage 4 depth" (buffer overflow)
Summary: [PIGLIT,radeonsi] crash in "spec/EXT_framebuffer_multisample/sample-alpha-to-...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
: 70916 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-27 14:40 UTC by Kai
Modified: 2013-10-31 15:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Full GDB backtrace of crash/buffer overflow (76.72 KB, text/plain)
2013-10-27 14:40 UTC, Kai
Details
Patch to address this bug. (1.38 KB, patch)
2013-10-27 18:40 UTC, Kai
Details | Splinter Review

Description Kai 2013-10-27 14:40:41 UTC
Created attachment 88177 [details]
Full GDB backtrace of crash/buffer overflow

While running Piglit on radeonsi (full graphics stack detailed below) I encountered an crash in "spec/EXT_framebuffer_multisample/sample-alpha-to-coverage 4 depth". See the attached GDB backtrace and register dump for more details.

Stack:
GPU: "PITCAIRN" (ChipID = 0x6819)
Linux: 3.11.6
libdrm: 2.4.47
LLVM: SVN:trunk/r193475
libclc: Git:master/4c18120c1a
Mesa: Git:master/64c081e8b7
GLAMOR: Git:master/ba209eeef2
DDX: Git:master/f1dc677e79

Let me know if you need further information.
Comment 1 Kai 2013-10-27 18:26:08 UTC
*** Bug 70916 has been marked as a duplicate of this bug. ***
Comment 2 Kai 2013-10-27 18:40:56 UTC
Created attachment 88190 [details] [review]
Patch to address this bug.

I've sent the attached patch to mesa-dev as well, please review/commit.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.